Version 2.6 - Fixed button sizing on Mobile.-

--- a/src/style/_mediaqueries.scss
+++ b/src/style/_mediaqueries.scss
@@ -42,6 +42,9 @@
 }
 
 @mixin medium {
+    main {
+        padding: 1vw 1vh;
+    }
     header {
         margin: 20px auto 10px;
         nav {
@@ -69,6 +72,9 @@
                 margin: 5px auto;
             }
         }
+    }
+    .itemDetailContainer {
+        margin: 20px auto 40px;
     }
 }
 
