--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -22,6 +22,7 @@
     max-width: 90vw;
     color:white;
     margin: 20px 30px;
+    padding: 10px;
     text-align: center;
     overflow-wrap: break-word;
     word-break: break-word;
@@ -97,15 +98,18 @@
     }
 }
 
-@mixin itemCardContainer {
+@mixin detailContainer {
     /*WIP*/
     /*WIP*/
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-items: center;
-    margin: 100px auto;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-content: center;
+    gap: 1rem;
+    margin: 20px auto;
     padding: 10px;
+    width: 100%;
+    height: auto;
     border-radius: 5px;
     background-color: transparent;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5),
